--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "mihai-stancu/doctrine2-types-short-guid",
+    "name": "mihai-stancu/doctrine-types-extra",
     "type": "library",
-    "description": "Doctrine2 using MySQL's `UUID_SHORT()` function to generate GUIDs stored as BIGINTs.",
-    "keywords": ["short_guid", "short_uuid", "uuid", "guid", "doctrine2", "mysql", "bigint"],
+    "description": "Doctrine2 storing `UUID()` as BINARY(16) and `UUID_SHORT()` as BIGINT for MySQL.",
+    "keywords": ["binary_guid", "binary_uuid", "short_guid", "short_uuid", "uuid", "guid", "doctrine2", "mysql", "binary", "bigint"],
     "license": "MIT",
     "authors": [
         {
@@ -11,6 +11,7 @@
         }
     ],
     "require": {
+        "php": ">=5.4.0",
         "doctrine/orm": ">=2.1"
     },
     "autoload": {
