--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
         "doctrine/orm": ">=2.1"
     },
     "autoload": {
-        "psr-4": { "MS\\Doctrine\\": "lib/" }
+        "psr-4": { "MS\\Doctrine\\": "src/" }
     }
 }
