--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,12 @@
     "require": {
         "php": ">=5.4.0",
 
-        "doctrine/orm": ">=2.1"
+        "doctrine/orm": ">=2.1",
+        "symfony/dependency-injection": "2.*",
+        "symfony/config": "2.*",
+        "symfony/http-kernel": "2.*"
     },
     "autoload": {
-        "psr-4": { "MS\\DoctrineTypes\\": "src/" }
+        "psr-4": { "MS\\DoctrineTypes\\": "" }
     }
 }
