--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,14 +5,17 @@
 
     <testsuites>
         <testsuite>
-            <directory>./src/Tests</directory>
+            <directory>./Tests</directory>
         </testsuite>
     </testsuites>
 
     <filter>
         <whitelist>
+            <directory>./</directory>
             <exclude>
-                <directory>./src/Test</directory>
+                <directory>./Resources/</directory>
+                <directory>./Tests/</directory>
+                <directory>./vendor/</directory>
             </exclude>
         </whitelist>
     </filter>
